Tickets creation (controller + documentation)
