# start/routes.ts
@@ -10,11 +10,11 @@
 import router from '@adonisjs/core/services/router'
 import { middleware } from '#start/kernel'
 import transmit from '@adonisjs/transmit/services/main'
+const TicketsController = () => import('#controllers/tickets_controller')
 const UserAuthController = () => import('#controllers/User/user_auth_controller')
 const UserResourceController = () => import('#controllers/User/user_resource_controller')
 
 router.get('/', async () => {
-
   return {
     hello: 'world',
   }
@@ -36,4 +36,24 @@ router.get('/auth', [UserAuthController, 'current']).use(
   })
 )
 
-router.resource('users', UserResourceController).apiOnly().use('*', middleware.auth())
+// Users
+router
+  .group(() => {
+    router.get('/users', [UserResourceController, 'index'])
+    router.get('/users/:id', [UserResourceController, 'show'])
+    router.delete('/users/', [UserResourceController, 'destroy'])
+    router.put('/users/', [UserResourceController, 'update'])
+  })
+  .use(middleware.auth())
+
+// Tickets
+router
+  .group(() => {
+    router.get('/tickets', [TicketsController, 'index'])
+    router.post('/tickets', [TicketsController, 'store'])
+    router.get('/tickets/:id', [TicketsController, 'show'])
+    router.put('/tickets/:id/message', [TicketsController, 'postMessage'])
+    router.put('/tickets/:id/add-member', [TicketsController, 'addMember'])
+    router.patch('/tickets/:id', [TicketsController, 'close'])
+  })
+  .use(middleware.auth())
